--- a/web/sites/games/config/sync/field.field.taxonomy_term.game_provider.field_product_type.yml
+++ b/web/sites/games/config/sync/field.field.taxonomy_term.game_provider.field_product_type.yml
@@ -12,7 +12,7 @@ bundle: game_provider
 label: 'Product Type'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
