--- a/web/sites/games/config/sync/field.field.taxonomy_term.arcade_game_category.field_arcade_category_icon.yml
+++ b/web/sites/games/config/sync/field.field.taxonomy_term.arcade_game_category.field_arcade_category_icon.yml
@@ -12,7 +12,7 @@ field_name: field_arcade_category_icon
 entity_type: taxonomy_term
 bundle: arcade_game_category
 label: 'Arcade category icon'
-description: ''
+description: 'Note: upload PNG less than 10KB, size 40px x 40px'
 required: true
 translatable: false
 default_value: {  }
@@ -21,8 +21,8 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: 50x50
-  min_resolution: 50x50
+  max_resolution: ''
+  min_resolution: ''
   alt_field: true
   alt_field_required: false
   title_field: false
