--- a/web/sites/games/config/sync/views.view.arcade_games_categories_sorting_.yml
+++ b/web/sites/games/config/sync/views.view.arcade_games_categories_sorting_.yml
@@ -3,10 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.taxonomy_term.field_add_to_secondary_menu
     - field.storage.taxonomy_term.field_arcade_cat_alias
     - field.storage.taxonomy_term.field_arcade_category_icon
+    - field.storage.taxonomy_term.field_is_ordinary_category
     - field.storage.taxonomy_term.field_new
-    - image.style.thumbnail
     - taxonomy.vocabulary.arcade_game_category
   module:
     - draggableviews
@@ -723,6 +724,71 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_add_to_secondary_menu:
+          id: field_add_to_secondary_menu
+          table: taxonomy_term__field_add_to_secondary_menu
+          field: field_add_to_secondary_menu
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: boolean
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_arcade_category_icon:
           id: field_arcade_category_icon
           table: taxonomy_term__field_arcade_category_icon
@@ -774,10 +840,75 @@ display:
           click_sort_column: target_id
           type: image_export
           settings:
-            image_style: thumbnail
+            image_style: ''
             export_alt: 0
             export_title: false
           group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_is_ordinary_category:
+          id: field_is_ordinary_category
+          table: taxonomy_term__field_is_ordinary_category
+          field: field_is_ordinary_category
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: boolean
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -897,6 +1028,8 @@ display:
         - 'languages:language_interface'
         - request_format
       tags:
+        - 'config:field.storage.taxonomy_term.field_add_to_secondary_menu'
         - 'config:field.storage.taxonomy_term.field_arcade_cat_alias'
         - 'config:field.storage.taxonomy_term.field_arcade_category_icon'
+        - 'config:field.storage.taxonomy_term.field_is_ordinary_category'
         - 'config:field.storage.taxonomy_term.field_new'
