--- a/web/sites/ptplus/config/sync/field.field.node.ptplus.field_thumbnail_image.yml
+++ b/web/sites/ptplus/config/sync/field.field.node.ptplus.field_thumbnail_image.yml
@@ -7,6 +7,12 @@ dependencies:
     - node.type.ptplus
   module:
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      alt: alt
+      title: title
+      file: '0'
 id: node.ptplus.field_thumbnail_image
 field_name: field_thumbnail_image
 entity_type: node
