--- a/web/sites/ptplus/config/sync/field.field.node.ptplus.field_game_code.yml
+++ b/web/sites/ptplus/config/sync/field.field.node.ptplus.field_game_code.yml
@@ -10,7 +10,7 @@ field_name: field_game_code
 entity_type: node
 bundle: ptplus
 label: 'Game Code'
-description: ''
+description: "<br><b>Game Code for :</b><br>\r\n<ul>\r\n    <li><b>PTPlus:</b> <i> gameCode|gameType</i> (Slot, Live)</li>\r\n</ul>\r\n<br>"
 required: true
 translatable: false
 default_value: {  }
