--- a/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
@@ -20,3 +20,5 @@ lobby_tab: 0
 lobby_tab_message: 'Term @term already exists in vocabulary @vocabulary.'
 game_tile_image_size: 0
 game_tile_image_size_message: 'Term @term already exists in vocabulary @vocabulary.'
+games_collection_type: 1
+games_collection_type_message: 'Term @term already exists in vocabulary @vocabulary.'
