--- a/web/sites/ptplus/config/sync/views.view.desktop_collection.yml
+++ b/web/sites/ptplus/config/sync/views.view.desktop_collection.yml
@@ -1,13 +1,13 @@
-uuid: 99169049-7aea-483b-8c7d-b84546d65c57
+uuid: 6337a7cc-bdd3-4758-8906-cd08218d0783
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.desktop_game_collection.field_game_category
-    - field.storage.desktop_game_collection.field_games
-    - field.storage.desktop_game_collection.field_type
+    - field.storage.desktop_collection.field_game_category
+    - field.storage.desktop_collection.field_games
+    - field.storage.desktop_collection.field_type
   module:
-    - desktop_game_collection
+    - desktop_collection
     - rest
     - rest_views
     - serialization
@@ -17,7 +17,7 @@ label: 'Desktop Collection'
 module: views
 description: ''
 tag: ''
-base_table: desktop_game_collection_field_data
+base_table: desktop_collection_field_data
 base_field: id
 core: 8.x
 display:
@@ -75,7 +75,7 @@ display:
         type: fields
       fields:
         name:
-          table: desktop_game_collection_field_data
+          table: desktop_collection_field_data
           field: name
           id: name
           entity_type: null
@@ -161,10 +161,10 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: admin/structure/desktop_game_collection
+      path: admin/structure/desktop_collection
       fields:
         name:
-          table: desktop_game_collection_field_data
+          table: desktop_collection_field_data
           field: name
           id: name
           entity_type: null
@@ -229,7 +229,7 @@ display:
           field_api_classes: false
         field_type:
           id: field_type
-          table: desktop_game_collection__field_type
+          table: desktop_collection__field_type
           field: field_type
           relationship: none
           group_type: group
@@ -292,7 +292,7 @@ display:
           plugin_id: field
         field_game_category:
           id: field_game_category
-          table: desktop_game_collection__field_game_category
+          table: desktop_collection__field_game_category
           field: field_game_category
           relationship: none
           group_type: group
@@ -355,7 +355,7 @@ display:
           plugin_id: field
         operations:
           id: operations
-          table: desktop_game_collection
+          table: desktop_collection
           field: operations
           relationship: none
           group_type: group
@@ -402,19 +402,12 @@ display:
           empty_zero: false
           hide_alter_empty: true
           destination: false
-          entity_type: desktop_game_collection
+          entity_type: desktop_collection
           plugin_id: entity_operations
       defaults:
         fields: false
-        pager: false
         empty: false
-        filters: false
-        filter_groups: false
-        sorts: false
-      pager:
-        type: none
-        options:
-          offset: 0
+        pager: false
       empty:
         area_text_custom:
           id: area_text_custom
@@ -427,87 +420,18 @@ display:
           tokenize: false
           content: 'No collections yet.'
           plugin_id: text_custom
-      filters:
-        langcode:
-          id: langcode
-          table: desktop_game_collection_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: desktop_game_collection
-          entity_field: langcode
-          plugin_id: language
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-      sorts:
-        field_type_target_id:
-          id: field_type_target_id
-          table: desktop_game_collection__field_type
-          field: field_type_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: standard
-        created:
-          id: created
-          table: desktop_game_collection_field_data
-          field: created
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: DESC
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
-          entity_type: desktop_game_collection
-          entity_field: created
-          plugin_id: date
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
       tags:
-        - 'config:field.storage.desktop_game_collection.field_game_category'
-        - 'config:field.storage.desktop_game_collection.field_type'
+        - 'config:field.storage.desktop_collection.field_game_category'
+        - 'config:field.storage.desktop_collection.field_type'
   rest_export_1:
     display_plugin: rest_export
     id: rest_export_1
@@ -519,7 +443,7 @@ display:
       style:
         type: node_field_serializer
         options:
-          uses_fields: false
+          uses_fields: true
           formats:
             json: json
       defaults:
@@ -544,14 +468,14 @@ display:
               raw_output: false
             field_games_export:
               alias: games
-              raw_output: false
+              raw_output: true
       pager:
         type: none
         options:
           offset: 0
       fields:
         name:
-          table: desktop_game_collection_field_data
+          table: desktop_collection_field_data
           field: name
           id: name
           entity_type: null
@@ -616,7 +540,7 @@ display:
           field_api_classes: false
         field_type_export:
           id: field_type_export
-          table: desktop_game_collection__field_type
+          table: desktop_collection__field_type
           field: field_type_export
           relationship: none
           group_type: group
@@ -683,7 +607,7 @@ display:
           plugin_id: field_export
         field_game_category_export:
           id: field_game_category_export
-          table: desktop_game_collection__field_game_category
+          table: desktop_collection__field_game_category
           field: field_game_category_export
           relationship: none
           group_type: group
@@ -743,7 +667,7 @@ display:
           plugin_id: field_export
         field_games_export:
           id: field_games_export
-          table: desktop_game_collection__field_games
+          table: desktop_collection__field_games
           field: field_games_export
           relationship: none
           group_type: group
@@ -804,7 +728,7 @@ display:
       filters:
         langcode:
           id: langcode
-          table: desktop_game_collection_field_data
+          table: desktop_collection_field_data
           field: langcode
           relationship: none
           group_type: group
@@ -839,7 +763,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: desktop_game_collection
+          entity_type: desktop_collection
           entity_field: langcode
           plugin_id: language
       filter_groups:
@@ -849,7 +773,7 @@ display:
       sorts:
         field_type_target_id:
           id: field_type_target_id
-          table: desktop_game_collection__field_type
+          table: desktop_collection__field_type
           field: field_type_target_id
           relationship: none
           group_type: group
@@ -861,7 +785,7 @@ display:
           plugin_id: standard
         name:
           id: name
-          table: desktop_game_collection_field_data
+          table: desktop_collection_field_data
           field: name
           relationship: none
           group_type: group
@@ -870,7 +794,7 @@ display:
           exposed: false
           expose:
             label: ''
-          entity_type: desktop_game_collection
+          entity_type: desktop_collection
           entity_field: name
           plugin_id: standard
     cache_metadata:
@@ -880,6 +804,6 @@ display:
         - 'languages:language_interface'
         - request_format
       tags:
-        - 'config:field.storage.desktop_game_collection.field_game_category'
-        - 'config:field.storage.desktop_game_collection.field_games'
-        - 'config:field.storage.desktop_game_collection.field_type'
+        - 'config:field.storage.desktop_collection.field_game_category'
+        - 'config:field.storage.desktop_collection.field_games'
+        - 'config:field.storage.desktop_collection.field_type'
