--- a/web/sites/ptplus/config/sync/views.view.mobile_collection_api.yml
+++ b/web/sites/ptplus/config/sync/views.view.mobile_collection_api.yml
@@ -2,10 +2,6 @@ uuid: a9174fc5-3f65-46ae-b7ac-697f7927a03f
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.mobile_collection.field_games
-    - field.storage.mobile_collection.field_games_category
-    - field.storage.mobile_collection.field_type
   module:
     - mobile_collection
     - rest
@@ -69,50 +65,7 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: table
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
-          override: true
-          sticky: false
-          caption: ''
-          summary: ''
-          description: ''
-          columns:
-            name: name
-            field_games_category: field_games_category
-            field_games: field_games
-            field_type: field_type
-          info:
-            name:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_games_category:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_games:
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            field_type:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          default: '-1'
-          empty_table: false
+        type: serializer
       row:
         type: fields
         options:
@@ -122,142 +75,12 @@ display:
           default_field_elements: true
       fields:
         name:
-          id: name
           table: mobile_collection_field_data
           field: name
-          entity_type: mobile_collection
+          id: name
+          entity_type: null
           entity_field: name
           plugin_id: field
-        field_games_category:
-          id: field_games_category
-          table: mobile_collection__field_games_category
-          field: field_games_category
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Category
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: false
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_type:
-          id: field_type
-          table: mobile_collection__field_type
-          field: field_type
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Type
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_label
-          settings:
-            link: false
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_games:
-          id: field_games
-          table: mobile_collection__field_games
-          field: field_games
           relationship: none
           group_type: group
           admin_label: ''
@@ -294,7 +117,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -302,10 +125,10 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: target_id
-          type: entity_reference_entity_id
+          click_sort_column: value
+          type: string
           settings: {  }
-          group_column: target_id
+          group_column: value
           group_columns: {  }
           group_rows: true
           delta_limit: 0
@@ -315,7 +138,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          plugin_id: field
       filters:
         langcode:
           id: langcode
@@ -370,11 +192,9 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - request_format
         - url.query_args
-      tags:
-        - 'config:field.storage.mobile_collection.field_games'
-        - 'config:field.storage.mobile_collection.field_games_category'
-        - 'config:field.storage.mobile_collection.field_type'
+      tags: {  }
   rest_export_1:
     display_plugin: rest_export
     id: rest_export_1
@@ -384,38 +204,23 @@ display:
       display_extenders: {  }
       path: api/mobile-collection
       pager:
-        type: none
+        type: some
         options:
+          items_per_page: 10
           offset: 0
       style:
-        type: node_field_serializer
+        type: node_list_serializer
         options:
-          uses_fields: true
+          uses_fields: false
           formats:
             json: json
       row:
-        type: data_field
-        options:
-          field_options:
-            name:
-              alias: ''
-              raw_output: false
-            field_games_category:
-              alias: category
-              raw_output: false
-            field_games:
-              alias: games
-              raw_output: true
-            field_type:
-              alias: type
-              raw_output: false
+        type: data_entity
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
-      tags:
-        - 'config:field.storage.mobile_collection.field_games'
-        - 'config:field.storage.mobile_collection.field_games_category'
-        - 'config:field.storage.mobile_collection.field_type'
+      tags: {  }
