[DFPTPLUS-11] Renamed sorting page title

--- a/web/sites/ptplus/config/sync/views.view.desktop_games_category.yml
+++ b/web/sites/ptplus/config/sync/views.view.desktop_games_category.yml
@@ -851,8 +851,8 @@ display:
       path: admin/games/desktop_categories
       menu:
         type: normal
-        title: 'Sort Categories'
-        description: ''
+        title: 'Sort Desktop Categories'
+        description: 'Provides Configuration for sorting desktop categories'
         expanded: false
         parent: webcomposer_games.list
         weight: 0
