--- a/web/sites/ptplus/config/sync/core.entity_form_display.mobile_collection.mobile_collection.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.mobile_collection.mobile_collection.default.yml
@@ -49,5 +49,8 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
 hidden:
   user_id: true
