--- a/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.ptplus.field_games_list_category
     - field.field.node.ptplus.field_keywords
     - field.field.node.ptplus.field_platform
+    - field.field.node.ptplus.field_preview_mode
     - field.field.node.ptplus.field_thumbnail_image
     - node.type.ptplus
   module:
@@ -71,6 +72,16 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
+  field_preview_mode:
+    weight: 8
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   field_thumbnail_image:
     weight: 3
