[DFPTPLUS-11] Resolved showing only 10 games issue

--- a/web/sites/ptplus/config/sync/views.view.games_list.yml
+++ b/web/sites/ptplus/config/sync/views.view.games_list.yml
@@ -611,6 +611,10 @@ display:
         operator: AND
         groups:
           1: AND
+      pager:
+        type: none
+        options:
+          offset: 0
     cache_metadata:
       max-age: -1
       contexts:
