--- a/web/sites/ptplus/config/sync/field.field.node.ptplus.field_preview_mode.yml
+++ b/web/sites/ptplus/config/sync/field.field.node.ptplus.field_preview_mode.yml
@@ -12,7 +12,7 @@ bundle: ptplus
 label: 'Preview Mode'
 description: 'Mark game for preview mode. Game will only be available when "pvw=1" query string parameter is appended on the URL.'
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
