--- a/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/ptplus/config/sync/taxonomy_unique.settings.yml
@@ -22,3 +22,7 @@ game_tile_image_size: 0
 game_tile_image_size_message: 'Term @term already exists in vocabulary @vocabulary.'
 games_collection_type: 1
 games_collection_type_message: 'Term @term already exists in vocabulary @vocabulary.'
+game_categories: 0
+game_categories_message: 'Term @term already exists in vocabulary @vocabulary.'
+page_content: 0
+page_content_message: 'Term @term already exists in vocabulary @vocabulary.'
