[MZEDBET-103] - Added live dealer product

--- a/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.webcomposer_slider_v2_entity.field_product
+    - taxonomy.vocabulary.product
   module:
     - webcomposer_slider_v2
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product
@@ -18,5 +19,12 @@ default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
-  handler_settings: {  }
+  handler_settings:
+    target_bundles:
+      product: product
+    sort:
+      field: name
+      direction: asc
+    auto_create: false
+    auto_create_bundle: ''
 field_type: entity_reference
