--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.node.page.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.node.page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_breadcrumbs
     - field.field.node.page.field_button_link
     - field.field.node.page.field_button_open_link
     - field.field.node.page.field_image
@@ -59,6 +60,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_breadcrumbs:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_button_link:
     weight: 12
     settings:
