--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.basic_page_type_2.body
+    - field.field.node.basic_page_type_2.field_breadcrumbs
     - field.field.node.basic_page_type_2.field_button_link
     - field.field.node.basic_page_type_2.field_button_open_link
     - field.field.node.basic_page_type_2.field_image
@@ -56,6 +57,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_breadcrumbs:
+    weight: 15
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_button_link:
     weight: 9
     settings:
@@ -93,7 +102,7 @@ content:
     type: options_select
     region: content
   field_meta_tag:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
@@ -115,7 +124,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -130,7 +139,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 13
+    weight: 14
     region: content
     third_party_settings: {  }
   sticky:
@@ -147,6 +156,11 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  translation:
+    weight: 11
+    region: content
+    settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
