--- a/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product_slide.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product_slide.yml
@@ -13,7 +13,7 @@ entity_type: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
 label: Product
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
