--- a/web/sites/mobile-zedbet/config/sync/language.content_settings.registration_theme_entity.registration_theme_entity.yml
+++ b/web/sites/mobile-zedbet/config/sync/language.content_settings.registration_theme_entity.registration_theme_entity.yml
@@ -7,11 +7,11 @@ dependencies:
     - registration_theme
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
 id: registration_theme_entity.registration_theme_entity
 target_entity_type_id: registration_theme_entity
 target_bundle: registration_theme_entity
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
