--- a/web/sites/mobile-zedbet/config/sync/registration_config.general_configuration.yml
+++ b/web/sites/mobile-zedbet/config/sync/registration_config.general_configuration.yml
@@ -19,7 +19,7 @@ country_restriction_message: '[product] is not available in your region'
 mbtc_product_portal_id: '2,105,9,111,27,129,46,139,22,29,131,48,141,123,26,128'
 mbtc_restriction_message: 'Bitcoin currency is only available in Dafasports.'
 text_over_banner_mobile:
-  value: "<p><span class=\"text-10 text-white\">WELCOME TO\r\n  <br />\r\n  <span class=\"text-16 text-yellow\">ASIA'S NUMBER 1</span>\r\n  <br />\r\n  ONLINE GAMING</span>\r\n  <br />\r\n  <span class=\"text-10 text-white\">AND\r\n    <br />\r\n    <span class=\"text-16 text-yellow\">MOST TRUSTED</span>\r\n    <br />\r\n    BETTING WEBSITE!</span>\r\n</p>\r\n"
+  value: "<p><span class=\"text-10 text-white\">WELCOME TO<br />\r\n<span class=\"text-16 text-yellow\">ASIA'S NUMBER 1</span><br />\r\nONLINE GAMING</span><br />\r\n<span class=\"text-10 text-white\">AND<br />\r\n<span class=\"text-16 text-yellow\">MOST TRUSTED</span><br />\r\nBETTING WEBSITE!</span></p>\r\n"
   format: basic_html
 value: null
 format: null
