slider view fix

--- a/web/sites/mobile-zedbet/config/sync/views.view.webcomposer_slider_ver2.yml
+++ b/web/sites/mobile-zedbet/config/sync/views.view.webcomposer_slider_ver2.yml
@@ -1193,7 +1193,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: and
+          operator: or
           value:
             all: all
           group: 1
