--- a/web/sites/ptplus/config/sync/language.entity.pt-br.yml
+++ b/web/sites/ptplus/config/sync/language.entity.pt-br.yml
@@ -1,9 +1,15 @@
 uuid: e033d424-adb3-4162-a167-3bb8d1040216
-langcode: en
+langcode: pt-br
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - webcomposer_language_hierarchy
+third_party_settings:
+  webcomposer_language_hierarchy:
+    webcomposer_fallback_langcode: ''
+    webcomposer_language_hidden: 1
 id: pt-br
 label: 'Portuguese, Brazil'
 direction: ltr
-weight: -1
+weight: 3
 locked: false
