--- a/web/sites/ptplus/config/sync/views.view.desktop_collection.yml
+++ b/web/sites/ptplus/config/sync/views.view.desktop_collection.yml
@@ -408,6 +408,9 @@ display:
         fields: false
         empty: false
         pager: false
+        filters: false
+        filter_groups: false
+        sorts: false
       empty:
         area_text_custom:
           id: area_text_custom
@@ -424,6 +427,79 @@ display:
         type: none
         options:
           offset: 0
+      filters:
+        langcode:
+          id: langcode
+          table: desktop_collection_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: desktop_collection
+          entity_field: langcode
+          plugin_id: language
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      sorts:
+        field_type_target_id:
+          id: field_type_target_id
+          table: desktop_collection__field_type
+          field: field_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+        created:
+          id: created
+          table: desktop_collection_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: desktop_collection
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
