[MZEDBET-118] Created product integration Taxonomy and its view

--- a/web/sites/mobile-zedbet/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/mobile-zedbet/config/sync/taxonomy_unique.settings.yml
@@ -20,3 +20,5 @@ games_providers_live_dealer: 0
 games_providers_live_dealer_message: 'Term @term already exists in vocabulary @vocabulary.'
 lobby_tab_live_dealer: 1
 lobby_tab_live_dealer_message: 'Term @term already exists in vocabulary @vocabulary.'
+product_integrations: 1
+product_integrations_message: 'Term @term already exists in vocabulary @vocabulary.'
