--- a/web/sites/mobile-zedbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
@@ -3,11 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.games_live_dealer.field__target_ld
     - field.field.node.games_live_dealer.field_game_code_live_dealer
+    - field.field.node.games_live_dealer.field_game_platform_live_dealer
     - field.field.node.games_live_dealer.field_game_provider_live_dealer
     - field.field.node.games_live_dealer.field_game_ribbon_live_dealer
     - field.field.node.games_live_dealer.field_lobby_tab_ld
     - field.field.node.games_live_dealer.field_preview_mode_ld
+    - field.field.node.games_live_dealer.field_provider_logo_ld
     - field.field.node.games_live_dealer.field_thumbnail_image_ld
     - field.field.node.games_live_dealer.field_use_game_loader_ld
     - node.type.games_live_dealer
@@ -20,6 +23,13 @@ targetEntityType: node
 bundle: games_live_dealer
 mode: default
 content:
+  field__target_ld:
+    weight: 14
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_game_code_live_dealer:
     weight: 1
     label: above
@@ -27,6 +37,13 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_platform_live_dealer:
+    weight: 13
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_game_provider_live_dealer:
     weight: 2
@@ -60,6 +77,15 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_provider_logo_ld:
+    weight: 12
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_thumbnail_image_ld:
     weight: 10
