--- a/web/sites/mobile-zedbet/config/sync/language.content_settings.node.games_live_dealer.yml
+++ b/web/sites/mobile-zedbet/config/sync/language.content_settings.node.games_live_dealer.yml
@@ -9,6 +9,8 @@ dependencies:
 third_party_settings:
   content_translation:
     enabled: true
+    bundle_settings:
+      untranslatable_fields_hide: '0'
 id: node.games_live_dealer
 target_entity_type_id: node
 target_bundle: games_live_dealer
