--- a/web/sites/mobile-zedbet/config/sync/views.view.games_list_live_dealer.yml
+++ b/web/sites/mobile-zedbet/config/sync/views.view.games_list_live_dealer.yml
@@ -879,6 +879,11 @@ display:
       row:
         type: data_entity
         options: {  }
+      access:
+        type: none
+        options: {  }
+      defaults:
+        access: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -886,5 +891,4 @@ display:
         - 'languages:language_interface'
         - request_format
         - 'user.node_grants:view'
-        - user.permissions
       tags: {  }
