--- a/web/sites/zedbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
@@ -4,10 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.games_live_dealer.body
+    - field.field.node.games_live_dealer.field_game_code
     - field.field.node.games_live_dealer.field_game_icon
     - field.field.node.games_live_dealer.field_game_image
     - field.field.node.games_live_dealer.field_game_image_large
+    - field.field.node.games_live_dealer.field_game_provider
     - field.field.node.games_live_dealer.field_game_ribbon
+    - field.field.node.games_live_dealer.field_game_subprovider
     - field.field.node.games_live_dealer.field_game_title
     - field.field.node.games_live_dealer.field_image_size
     - field.field.node.games_live_dealer.field_maintenance_blurb
@@ -60,7 +63,7 @@ third_party_settings:
         - field_maintenance_start
         - field_maintenance_end
       parent_name: ''
-      weight: 5
+      weight: 7
       format_type: tab
       format_settings:
         id: ''
@@ -69,11 +72,34 @@ third_party_settings:
         description: ''
         required_fields: true
       label: 'Game Room Maintenance/Coming Soon'
+    group_game_launching:
+      children:
+        - field_game_provider
+        - field_game_code
+        - field_game_subprovider
+      parent_name: ''
+      weight: 5
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: open
+        description: ''
+        required_fields: true
+      label: 'Game Launching'
 id: node.games_live_dealer.default
 targetEntityType: node
 bundle: games_live_dealer
 mode: default
 content:
+  field_game_code:
+    weight: 7
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_game_icon:
     weight: 21
     settings:
@@ -134,12 +160,24 @@ content:
           bundle: games_live_dealer
     type: image_image
     region: content
+  field_game_provider:
+    type: options_select
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_game_ribbon:
     weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
+  field_game_subprovider:
+    type: options_select
+    weight: 8
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_game_title:
     weight: 20
     settings:
@@ -183,18 +221,18 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 6
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -202,7 +240,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 12
     region: content
     third_party_settings: {  }
   title:
@@ -215,7 +253,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 7
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
