--- a/web/sites/zedbet/config/sync/pathauto.pattern.node_pattern.yml
+++ b/web/sites/zedbet/config/sync/pathauto.pattern.node_pattern.yml
@@ -1,4 +1,4 @@
-uuid: 4df40dcf-d0f9-4a00-9f03-afe183918527
+uuid: 7e83b422-613f-4f20-ae7c-ca69a2bb6259
 langcode: en
 status: true
 dependencies:
@@ -9,17 +9,15 @@ label: 'node pattern'
 type: 'canonical_entities:node'
 pattern: '/[node:title]'
 selection_criteria:
-  3355d6b6-d94a-4f2b-99d0-ed692600aa62:
+  49eb03ca-f54d-4254-bc74-144ecad9e979:
     id: node_type
     bundles:
-      game: game
+      games_live_dealer: games_live_dealer
       page: page
-      promotion: promotion
-      vip_page: vip_page
     negate: false
     context_mapping:
       node: node
-    uuid: 3355d6b6-d94a-4f2b-99d0-ed692600aa62
+    uuid: 49eb03ca-f54d-4254-bc74-144ecad9e979
 selection_logic: and
 weight: -5
 relationships: {  }
