[MZEDBET-84] Mobile Zedbet Live-Dealer Evolution game integration update icore game integration file

--- a/web/sites/mobile-zedbet/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/mobile-zedbet/config/sync/webcomposer_config.icore_games_integration.yml
@@ -22,8 +22,8 @@ gold_deluxe_country: ''
 video_racing_currency: ''
 video_racing_language_mapping: ''
 video_racing_country: ''
-sa_gaming_currency: ''
-sa_gaming_language_mapping: ''
+sa_gaming_currency: "USD\r\nTHB\r\nTUS"
+sa_gaming_language_mapping: "en|en-US\r\nth|th"
 sa_gaming_country: ''
 allbet_currency: ''
 allbet_language_mapping: ''
