--- a/web/sites/mobile-zedbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   metatag: 0
   mobile_config: 0
   mobile_live_dealer: 0
+  mobile_product_menu: 0
   node: 0
   options: 0
   paragraphs: 0
