added sportsbook urls

--- a/web/sites/zedbet/config/sync/zedbet_urls.urls_configuration.yml
+++ b/web/sites/zedbet/config/sync/zedbet_urls.urls_configuration.yml
@@ -1,1 +1,1 @@
-whitelist_urls: 'http://testing.elysium-dfbt.com'
+whitelist_urls: "https://www-zb-stg.elysium-dfbt.com/\r\nhttps://www-zb-in1.elysium-dfbt.com"
