update mobile games list view

--- a/web/sites/ptplus/config/sync/views.view.games_list.yml
+++ b/web/sites/ptplus/config/sync/views.view.games_list.yml
@@ -410,10 +410,14 @@ display:
       defaults:
         filters: false
         filter_groups: false
+        cache: false
       filter_groups:
         operator: AND
         groups:
           1: AND
+      cache:
+        type: none
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
