ZEDBET-72-Game-Preview-Mode issue

--- a/web/sites/zedbet/config/sync/field.field.node.games_live_dealer.field_game_preview_mode.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.games_live_dealer.field_game_preview_mode.yml
@@ -12,7 +12,7 @@ bundle: games_live_dealer
 label: 'Preview Mode'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: 0
